@@ -43,9 +43,9 @@
 	/* Public Interface - May be used in end-application: */
 		/* Macros: */
 			/** Indicates the version number of the library, as an integer. */
-			#define LUFA_VERSION_INTEGER     0x100807
+			#define LUFA_VERSION_INTEGER     0x000000
 
 			/** Indicates the version number of the library, as a string. */
-			#define LUFA_VERSION_STRING      "100807"
+			#define LUFA_VERSION_STRING      "XXXXXX"
 
 #endif
